example/lib/src/arbs/errors/app_pt_BR.arb
{
  "@@locale": "pt_BR",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Ocorreu um erro",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Ocorreu um erro inesperado",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Relatório de bug enviado com sucesso.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}